--- a/notebooks/01_intro.ipynb
+++ b/notebooks/01_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRHPigenFDPzeMeebC3SS/",
+      "authorship_tag": "ABX9TyNHPmgUT5qtlw8Bnuj4sT9G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,40 @@
       },
       "outputs": [],
       "source": [
-        "print(\"Sanskrit Translation Project Setup Successful!\")"
+        "# ============================================\n",
+        "#  Sanskrit_Translation Project – Setup Cell\n",
+        "#  Run this cell once at the start of every session\n",
+        "# ============================================\n",
+        "\n",
+        "# --- 1️⃣ Mount Google Drive (persistent storage) ---\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# --- 2️⃣ Create project directories in Drive ---\n",
+        "import os\n",
+        "\n",
+        "DRIVE_PROJECT_PATH = \"/content/drive/MyDrive/sanskrit_translation_data\"\n",
+        "os.makedirs(DRIVE_PROJECT_PATH, exist_ok=True)\n",
+        "\n",
+        "print(f\"✅ Google Drive mounted and project directory ready at: {DRIVE_PROJECT_PATH}\")\n",
+        "\n",
+        "# --- 3️⃣ Install project dependencies directly from GitHub ---\n",
+        "#     Replace <your-username> with your actual GitHub handle\n",
+        "!pip install -q -r https://raw.githubusercontent.com/<your-username>/Sanskrit_Translation/main/requirements.txt\n",
+        "\n",
+        "print(\"✅ Requirements installed successfully\")\n",
+        "\n",
+        "# --- 4️⃣ Verify GitHub access (check a sample file) ---\n",
+        "import requests\n",
+        "\n",
+        "url = \"https://raw.githubusercontent.com/<your-username>/Sanskrit_Translation/main/data/example_input.txt\"\n",
+        "r = requests.get(url)\n",
+        "if r.status_code == 200:\n",
+        "    print(\"✅ GitHub connection successful. Sample data:\")\n",
+        "    print(\"-\" * 40)\n",
+        "    print(r.text.strip())\n",
+        "else:\n",
+        "    print(\"⚠️ Could not fetch sample file from GitHub.\")\n"
       ]
     }
   ]
