--- a/notebooks/01_intro.ipynb
+++ b/notebooks/01_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHPmgUT5qtlw8Bnuj4sT9G",
+      "authorship_tag": "ABX9TyNhAv8+PiSDYUSWGRsFbQ29",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "F0CP9hLjuTDU"
+        "id": "F0CP9hLjuTDU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e5cb99cc-7a37-44aa-e310-dd48475d02a2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "✅ Google Drive mounted and project directory ready at: /content/drive/MyDrive/sanskrit_translation_data\n",
+            "/bin/bash: line 1: your-username: No such file or directory\n",
+            "✅ Requirements installed successfully\n",
+            "⚠️ Could not fetch sample file from GitHub.\n"
+          ]
+        }
+      ],
       "source": [
         "# ============================================\n",
         "#  Sanskrit_Translation Project – Setup Cell\n",
@@ -52,15 +68,14 @@
         "print(f\"✅ Google Drive mounted and project directory ready at: {DRIVE_PROJECT_PATH}\")\n",
         "\n",
         "# --- 3️⃣ Install project dependencies directly from GitHub ---\n",
-        "#     Replace <your-username> with your actual GitHub handle\n",
-        "!pip install -q -r https://raw.githubusercontent.com/<your-username>/Sanskrit_Translation/main/requirements.txt\n",
+        "!pip install -q -r https://raw.githubusercontent.com/PKPandey-DU/Sanskrit_Translation/main/requirements.txt\n",
         "\n",
         "print(\"✅ Requirements installed successfully\")\n",
         "\n",
         "# --- 4️⃣ Verify GitHub access (check a sample file) ---\n",
         "import requests\n",
         "\n",
-        "url = \"https://raw.githubusercontent.com/<your-username>/Sanskrit_Translation/main/data/example_input.txt\"\n",
+        "url = \"https://raw.githubusercontent.com/PKPandey-DU/Sanskrit_Translation/main/data/example_input.txt\"\n",
         "r = requests.get(url)\n",
         "if r.status_code == 200:\n",
         "    print(\"✅ GitHub connection successful. Sample data:\")\n",
