--- a/notebooks/01_intro.ipynb
+++ b/notebooks/01_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhAv8+PiSDYUSWGRsFbQ29",
+      "authorship_tag": "ABX9TyOY02AwxTibnv3Kc9qgfOnT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,24 +28,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "F0CP9hLjuTDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e5cb99cc-7a37-44aa-e310-dd48475d02a2"
+        "outputId": "fa410e03-6ebe-4666-b777-8b69a86299b3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
             "✅ Google Drive mounted and project directory ready at: /content/drive/MyDrive/sanskrit_translation_data\n",
-            "/bin/bash: line 1: your-username: No such file or directory\n",
-            "✅ Requirements installed successfully\n",
-            "⚠️ Could not fetch sample file from GitHub.\n"
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m51.8/51.8 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m104.1/104.1 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.2/10.2 MB\u001b[0m \u001b[31m63.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m56.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h✅ Requirements installed successfully\n",
+            "✅ GitHub connection successful. Sample data:\n",
+            "----------------------------------------\n",
+            "﻿धर्मो रक्षति रक्षितः ।\n",
+            "विद्या ददाति विनयं ।\n",
+            "कर्मण्येवाधिकारस्ते ।\n"
           ]
         }
       ],
@@ -53,6 +60,9 @@
         "# ============================================\n",
         "#  Sanskrit_Translation Project – Setup Cell\n",
         "#  Run this cell once at the start of every session\n",
+        "#  Sanskrit_Translation has been made Public for ease of use.\n",
+        "#  When it contains confidential/sensitive/Pre-published data, than,\n",
+        "#  make it Private and use Token\n",
         "# ============================================\n",
         "\n",
         "# --- 1️⃣ Mount Google Drive (persistent storage) ---\n",
@@ -82,8 +92,46 @@
         "    print(\"-\" * 40)\n",
         "    print(r.text.strip())\n",
         "else:\n",
-        "    print(\"⚠️ Could not fetch sample file from GitHub.\")\n"
+        "    print(\"⚠️ Could not fetch sample file from GitHub.\")\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ============================================\n",
+        "#  Sanskrit_Translation Project – Data Verification Cell\n",
+        "#  Loads sample corpus from GitHub and previews it\n",
+        "# ============================================\n",
+        "\n",
+        "import pandas as pd\n",
+        "import requests\n",
+        "from io import StringIO\n",
+        "\n",
+        "# --- 1️⃣ Download the small sample corpus directly from GitHub ---\n",
+        "url = \"https://raw.githubusercontent.com/<your-username>/Sanskrit_Translation/main/data/corpus_sample.csv\"\n",
+        "response = requests.get(url)\n",
+        "\n",
+        "if response.status_code == 200:\n",
+        "    print(\"✅ Successfully fetched corpus_sample.csv from GitHub.\")\n",
+        "    data = StringIO(response.text)\n",
+        "    df = pd.read_csv(data)\n",
+        "\n",
+        "    # --- 2️⃣ Display first few rows ---\n",
+        "    print(\"\\nSample Sanskrit–English Pairs:\")\n",
+        "    display(df.head())\n",
+        "\n",
+        "    # --- 3️⃣ Verify column structure ---\n",
+        "    print(\"\\nColumns:\", list(df.columns))\n",
+        "    print(f\"Total samples: {len(df)}\")\n",
+        "else:\n",
+        "    print(\"⚠️ Could not fetch corpus_sample.csv. Check that the file exists in your GitHub repo.\")\n"
+      ],
+      "metadata": {
+        "id": "9JmKeqAn_NAJ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
