--- a/notebooks/02_data_overview.ipynb
+++ b/notebooks/02_data_overview.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjqs9Pgb9s3ySk3HG7wfGt",
+      "authorship_tag": "ABX9TyMOqlMuCVz9x783e+QGt0sg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,44 +34,21 @@
       },
       "outputs": [],
       "source": [
-        "# Mount Drive & Set Project Path\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "project_dir = '/content/drive/MyDrive/sanskrit_translation_data'  # change if required\n",
-        "data_dir = f'{project_dir}/data'\n",
+        "%cd /content/drive/MyDrive/sanskrit_translation_data\n",
+        "!pip install -e .\n",
         "\n",
-        "# Load the sample data files from /data\n",
-        "import pandas as pd\n",
-        "import os\n",
+        "from src.sanskrit_translation.paths import CORPUS_RAW, CORPUS_CLEANED\n",
+        "from src.sanskrit_translation.io_utils import read_csv\n",
+        "from src.sanskrit_translation.preprocessing import clean_corpus\n",
         "\n",
-        "corpus_path = os.path.join(data_dir, \"corpus_sample.csv\")\n",
-        "input_path = os.path.join(data_dir, \"example_input.txt\")\n",
-        "output_path = os.path.join(data_dir, \"example_output.txt\")\n",
+        "df_raw = read_csv(CORPUS_RAW)\n",
+        "df_raw.head()\n",
         "\n",
-        "df = pd.read_csv(corpus_path)\n",
-        "df.head()\n",
-        "\n",
-        "# Display text files\n",
-        "with open(input_path, 'r', encoding='utf-8') as f:\n",
-        "    print(f.read())\n",
-        "\n",
-        "with open(output_path, 'r', encoding='utf-8') as f:\n",
-        "    print(f.read())\n",
-        "\n",
-        "# Create a Cleaned Version of Corpus\n",
-        "def basic_clean(text):\n",
-        "    text = text.strip()\n",
-        "    # add more rules later\n",
-        "    return text\n",
-        "\n",
-        "df['cleaned'] = df['text'].apply(basic_clean)\n",
-        "df.head()\n",
-        "\n",
-        "# Save cleaned corpus\n",
-        "clean_path = os.path.join(data_dir, \"corpus_cleaned.csv\")\n",
-        "df.to_csv(clean_path, index=False)\n",
-        "clean_path\n"
+        "df_clean = clean_corpus()\n",
+        "df_clean.head()\n"
       ]
     }
   ]
