--- a/notebooks/02_data_overview.ipynb
+++ b/notebooks/02_data_overview.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOqlMuCVz9x783e+QGt0sg",
+      "authorship_tag": "ABX9TyNQMUH30AWDVrZFCMszuwUR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,12 @@
       },
       "outputs": [],
       "source": [
+        "# Mount Drive & repo path\n",
+        "# Install project package (if needed)\n",
+        "# Load raw data\n",
+        "# Basic exploration\n",
+        "# Call clean_corpus\n",
+        "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
