--- a/notebooks/03_preprocessing.ipynb
+++ b/notebooks/03_preprocessing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPY61mNXgE+XTnmKSAu9M8W",
+      "authorship_tag": "ABX9TyOvKEtP7m2I+A9gYzjiDwX8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,30 +34,22 @@
       },
       "outputs": [],
       "source": [
-        "# Install NLP Packages\n",
-        "!pip install indic-nlp-library regex\n",
+        "# Colab setup + !pip install indic-nlp-library\n",
+        "# Import preprocessing.add_tokens_and_roman\n",
+        "# Create corpus_preprocessed.csv\n",
         "\n",
-        "# Download Indic NLP resources\n",
-        "!git clone https://github.com/anoopkunchukuttan/indic_nlp_library.git\n",
-        "!git clone https://github.com/anoopkunchukuttan/indic_nlp_resources.git\n",
+        "%cd /content/drive/MyDrive/sanskrit_translation_data\n",
+        "!pip install -e .\n",
+        "!pip install indic-nlp-library\n",
         "\n",
-        "# Use Preprocessing Utilities\n",
-        "from indicnlp.tokenize import indic_tokenize\n",
+        "from src.sanskrit_translation.paths import CORPUS_CLEANED, CORPUS_PREPROCESSED\n",
+        "from src.sanskrit_translation.io_utils import read_csv, write_csv\n",
+        "from src.sanskrit_translation.preprocessing import add_tokens_and_roman\n",
         "\n",
-        "sample = \"धर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः\"\n",
-        "tokens = indic_tokenize.trivial_tokenize(sample)\n",
-        "tokens\n",
-        "\n",
-        "# Transliteration\n",
-        "from indicnlp.transliterate.unicode_transliterate import UnicodeIndicTransliterator\n",
-        "\n",
-        "UnicodeIndicTransliterator.transliterate(sample, \"hi\", \"en\")\n",
-        "\n",
-        "# Save Preprocessed Corpus\n",
-        "df[\"tokens\"] = df[\"cleaned\"].apply(lambda x: indic_tokenize.trivial_tokenize(x))\n",
-        "df[\"roman\"] = df[\"cleaned\"].apply(lambda x: UnicodeIndicTransliterator.transliterate(x, \"hi\", \"en\"))\n",
-        "\n",
-        "df.to_csv(os.path.join(data_dir, \"corpus_preprocessed.csv\"), index=False)\n"
+        "df = read_csv(CORPUS_CLEANED)\n",
+        "df = add_tokens_and_roman(df, col=\"cleaned\")\n",
+        "write_csv(df, CORPUS_PREPROCESSED)\n",
+        "df.head()\n"
       ]
     }
   ]
