--- a/notebooks/04_linguistic_features.ipynb
+++ b/notebooks/04_linguistic_features.ipynb
@@ -1,6 +1,29 @@
 {
-  "cells": [],
-  "metadata": {},
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "# build_feature_corpus\n",
+        "\n",
+        "%cd /content/drive/MyDrive/sanskrit_translation_data\n",
+        "!pip install -e .\n",
+        "\n",
+        "from src.sanskrit_translation.features import build_feature_corpus\n",
+        "df_features = build_feature_corpus()\n",
+        "df_features.head()\n"
+      ],
+      "metadata": {
+        "id": "is0X6-xDas3_"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    }
+  },
   "nbformat": 4,
   "nbformat_minor": 0
 }
