--- a/notebooks/05_embeddings_tfidf.ipynb
+++ b/notebooks/05_embeddings_tfidf.ipynb
@@ -1,6 +1,31 @@
 {
-  "cells": [],
-  "metadata": {},
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/drive/MyDrive/sanskrit_translation_data\n",
+        "!pip install -e .\n",
+        "!pip install scikit-learn\n",
+        "\n",
+        "from src.sanskrit_translation.embeddings import build_tfidf_model\n",
+        "\n",
+        "vectorizer, X = build_tfidf_model()\n",
+        "X.shape\n",
+        "\n",
+        "# ToDo: Add visualization with sklearn + matplotlib\n"
+      ],
+      "metadata": {
+        "id": "UpnUkyjrcPL0"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    }
+  },
   "nbformat": 4,
   "nbformat_minor": 0
 }
