--- a/notebooks/07_rule_based_translation.ipynb
+++ b/notebooks/07_rule_based_translation.ipynb
@@ -1,6 +1,34 @@
 {
-  "cells": [],
-  "metadata": {},
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "# Demonstrate simple rule-based translation.\n",
+        "\n",
+        "%cd /content/drive/MyDrive/sanskrit_translation_data\n",
+        "!pip install -e .\n",
+        "!pip install indic-nlp-library\n",
+        "\n",
+        "from src.sanskrit_translation.preprocessing import tokenize_sentence\n",
+        "from src.sanskrit_translation.rule_based import translate_tokens\n",
+        "\n",
+        "text = \"धर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः\"\n",
+        "tokens = tokenize_sentence(text)\n",
+        "print(tokens)\n",
+        "print(translate_tokens(tokens))\n"
+      ],
+      "metadata": {
+        "id": "8TD4mNaAc60A"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    }
+  },
   "nbformat": 4,
   "nbformat_minor": 0
 }
