--- a/notebooks/06_embeddings_modern.ipynb
+++ b/notebooks/06_embeddings_modern.ipynb
@@ -1,6 +1,41 @@
 {
-  "cells": [],
-  "metadata": {},
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use HuggingFace sentence-transformers or multilingual model.\n",
+        "\n",
+        "!pip install -U sentence-transformers\n",
+        "\n",
+        "from sentence_transformers import SentenceTransformer\n",
+        "from src.sanskrit_translation.io_utils import read_csv\n",
+        "from src.sanskrit_translation.paths import CORPUS_CLEANED\n",
+        "import numpy as np\n",
+        "import pickle\n",
+        "from pathlib import Path\n",
+        "\n",
+        "df = read_csv(CORPUS_CLEANED)\n",
+        "model = SentenceTransformer(\"sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2\")\n",
+        "embeddings = model.encode(df[\"cleaned\"].tolist(), show_progress_bar=True)\n",
+        "\n",
+        "embeddings = np.array(embeddings)\n",
+        "Path(\"data\").mkdir(exist_ok=True)\n",
+        "with open(\"data/sentence_embeddings.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(embeddings, f)\n",
+        "embeddings.shape\n"
+      ],
+      "metadata": {
+        "id": "l7ajxjKxd7FO"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    }
+  },
   "nbformat": 4,
   "nbformat_minor": 0
 }
