--- a/notebooks/08_classical_ml_translation.ipynb
+++ b/notebooks/08_classical_ml_translation.ipynb
@@ -1,6 +1,46 @@
 {
-  "cells": [],
-  "metadata": {},
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "# nearest-neighbour retrieval: given Sanskrit sentence, pick closest English sentence from corpus.\n",
+        "\n",
+        "%cd /content/drive/MyDrive/sanskrit_translation_data\n",
+        "!pip install -e .\n",
+        "!pip install scikit-learn\n",
+        "\n",
+        "from src.sanskrit_translation.io_utils import read_csv\n",
+        "from src.sanskrit_translation.paths import CORPUS_CLEANED\n",
+        "from src.sanskrit_translation.embeddings import build_tfidf_model\n",
+        "\n",
+        "df = read_csv(CORPUS_CLEANED)\n",
+        "vectorizer, X = build_tfidf_model()\n",
+        "\n",
+        "from sklearn.neighbors import NearestNeighbors\n",
+        "\n",
+        "nn = NearestNeighbors(n_neighbors=1, metric=\"cosine\")\n",
+        "nn.fit(X)\n",
+        "\n",
+        "def retrieve_translation(query: str):\n",
+        "    q_vec = vectorizer.transform([query])\n",
+        "    dist, idx = nn.kneighbors(q_vec)\n",
+        "    idx = idx[0][0]\n",
+        "    return df.loc[idx]\n",
+        "\n",
+        "retrieve_translation(\"धर्मक्षेत्रे कुरुक्षेत्रे\")\n"
+      ],
+      "metadata": {
+        "id": "SD9H5pi5eJhY"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    }
+  },
   "nbformat": 4,
   "nbformat_minor": 0
 }
