--- a/notebooks/11_evaluation.ipynb
+++ b/notebooks/11_evaluation.ipynb
@@ -1,6 +1,34 @@
 {
-  "cells": [],
-  "metadata": {},
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compare all translation approaches.\n",
+        "\n",
+        "%cd /content/drive/MyDrive/sanskrit_translation_data\n",
+        "!pip install -e .\n",
+        "!pip install sacrebleu\n",
+        "\n",
+        "from src.sanskrit_translation.evaluation import bleu_score\n",
+        "\n",
+        "# prepare references, hypotheses for each model\n",
+        "print(\"Rule-based BLEU:\", bleu_score(refs, hyps_rule))\n",
+        "print(\"NN BLEU:\", bleu_score(refs, hyps_nn))\n",
+        "print(\"Seq2Seq BLEU:\", bleu_score(refs, hyps_seq2seq))\n",
+        "print(\"Transformer BLEU:\", bleu_score(refs, hyps_transformer))\n"
+      ],
+      "metadata": {
+        "id": "bGMoKkPbgHyV"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    }
+  },
   "nbformat": 4,
   "nbformat_minor": 0
 }
